# fastapi-example

./: main.py  pyproject.toml
