[tool.poetry]
name = "fastapi-example"
version = "0.1.0"
description = ""
authors = ["Jack Lin <goodjack@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.109.1"}
sentry-sdk = {extras = ["fastapi"], version = "^1.34.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
